# puzzle-search

./: CMakeLists.txt  ProjectHome.md  TaskList.md
input/: CMakeLists.txt  korf_100.txt
src/: CMakeLists.txt  common.h  domain.h  kpancake.h  kpancake.hpp  log.h  main.cpp  perimeterDB.h  perimeterDB.hpp  search.h  search.hpp  searchState.h  slidingTile.h  slidingTile.hpp  transTable.h  transTable.hpp
