# Cmake params
#cmake_minimum_required (VERSION 2.4.6)

# Project info
#project (Search)
#set (Search_VERSION_MAJOR_0)
#set (Search_VERSION_MINOR_1)

# Compiler settings
#set (CMAKE_CXX_FLAGS "-g -Wall")
#add_definitions (-DINPUT_FILE)


# Compiler files
#add_subdirectory(src)
#add_subdirectory(input)

# include_directories ("$PROJECT_COURCE_DIR")
#include_directories (src)

#add_library (slidingTile src/slidingTile.hpp src/slidingTile.h src/common.h src/search.h src/transTable.h src/search.h)
#add_executable (Search src/main.cpp
#                src/domain.h src/slidingTile.hpp src/slidingTile.h
#                src/common.h
#                src/searchState.h
#                src/search.h src/search.hpp
#                src/transTable.h src/transTable.hpp
#                src/perimeterDB.h src/perimeterDB.hpp
#                src/search.h)
#target_link_libraries(Search)


#add_custom_command (OUTPUT run
#                    DEPENDS Search
#                    COMMAND "./Search" )
